Menambahkan background pada halaman login dan registrasi, menambahkan responsivitas pada halaman utama ketika berada di HP dan Tablet, menambahkan responsivitas pada card yang ada di menu beranda

--- a/frontend/assets/css/login.css
+++ b/frontend/assets/css/login.css
@@ -1,6 +1,21 @@
-html {
-  background-color: var(--background-color);
+body {
+  background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
+    url('../img/rektorat_background.webp');
+  background-size: cover;
+  background-attachment: fixed;
 }
+
+/* Responsive */
+/* Mobile */
+@media (max-width: 768px) {
+  body {
+    background-attachment: scroll;
+  }
+}
+
+/* html {
+  background-color: var(--background-color);
+} */
 
 main {
   display: flex;
@@ -35,13 +50,15 @@ main {
 }
 
 .container-judul-aplikasi h1 {
-  color: var(--primary-color);
+  /* color: var(--primary-color); */
+  color: #fff;
   font-size: 2rem;
   margin-bottom: 0.5rem;
 }
 
 .container-judul-aplikasi p {
-  color: var(--text-color);
+  /* color: var(--text-color); */
+  color: #fff;
   font-size: 1rem;
 }
 
