--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -6,7 +6,8 @@
   --background-color: #EBF4F6;
   --text-color: #999;
   --merah: #D71313;
-  --card-border: #37b7c351;
+  --card-border: #ddd;
+  --hijau: #37b737;
 }
 
 * {
