--- a/frontend/assets/css/dashboard.css
+++ b/frontend/assets/css/dashboard.css
@@ -247,3 +247,63 @@ main {
 }
 /* Awal Navbar */
 
+/* Konten SPA */
+.content {
+  padding: 2rem 2rem 0;
+  border 1px solid red;
+  min-height: calc(100vh - 70px);
+  overflow-y: auto;
+}
+
+#mobile-toggle {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background: none;
+  border: none;
+  color: var(--primary-color);
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin-right: 0.5rem;
+}
+
+/* Responsive Sidebar */
+.overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s ease;
+  z-index: 999;
+}
+
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* Sidebar mobile */
+@media (max-width: 768px) {
+  .sidebar {
+    position: fixed;
+    left: -250px;
+    top: 0;
+    min-height: 100vh;
+    z-index: 1000;
+    transition: 0.3s ease;
+  }
+  #mobile-toggle {
+    display: flex;
+  }
+
+  .sidebar.active {
+    left: 0;
+  }
+}
+
+body.sidebar-open {
+  overflow: hidden;
+}
+
+
