--- a/frontend/assets/css/dashboard.css
+++ b/frontend/assets/css/dashboard.css
@@ -3,22 +3,25 @@ main {
   flex: 1;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .container {
   display: flex;
-  min-height: 100vh;
+  height: 100dvh; /* 🔥 dikunci layar */
+  overflow: hidden
 }
 
 /* Awal Sidebar */
 .sidebar {
+  -webkit-overflow-scrolling: touch;
   background: linear-gradient(
     135deg,
     var(--primary-color),
     var(--biru)
   );
   width: 250px;
-  min-height: 100vh;
+  height: 100%;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -185,8 +188,7 @@ main {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  position: sticky;
-  top: 0;
+  flex-shrink: 0;
   flex-direction: row;
   align-items: center;
   padding: 0.8rem 2rem;
@@ -249,11 +251,12 @@ main {
 
 /* Konten SPA */
 .content {
+  flex: 1;              /* ✅ jangan pakai height lagi */
   padding: 2rem 2rem 0;
-  border 1px solid red;
-  min-height: calc(100vh - 70px);
   overflow-y: auto;
+  min-height: 0;        /* 🔥 ini penting untuk flex scroll */
 }
+
 
 #mobile-toggle {
   display: none;
@@ -271,8 +274,9 @@ main {
 .overlay {
   position: fixed;
   inset: 0;
-  background: rgba(0, 0, 0, 0.4);
-  opacity: 0;
+  background: rgba(255, 255, 255, 0.20); /* tipis banget */
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   visibility: hidden;
   transition: 0.3s ease;
   z-index: 999;
@@ -289,7 +293,8 @@ main {
     position: fixed;
     left: -250px;
     top: 0;
-    min-height: 100vh;
+    height: 100dvh;
+    overflow-y: auto;
     z-index: 1000;
     transition: 0.3s ease;
   }
