--- a/frontend/assets/css/beranda.css
+++ b/frontend/assets/css/beranda.css
@@ -156,7 +156,7 @@
   margin-bottom: 0.2rem;
 }
 
-.info-mahaisiswa p {
+.info-mahasiswa p {
   margin: 0;
   font-size: 0.8rem;
   color: var(--text-color);
